// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Acta subscribeState.test method When an event is dispatched, the callback is triggered in the component. 1`] = `
<div>
  <h1>
    Elements
  </h1>
  <ul
    id="listContainer"
  />
  <p
    id="simpleValue"
  >
    Not Set
  </p>
  <p
    id="stateWithInitialValue"
  />
  <div
    id="functionnalComponentRoot"
  >
    <p
      id="valueFromState"
    >
      Not set yet
    </p>
    <p
      id="valueFromEvent"
    >
      Not set yet
    </p>
  </div>
  <button
    id="unmountFunctionalComponent"
    onClick={[Function]}
  >
    unmount functionnal component
  </button>
</div>
`;

exports[`Acta subscribeState.test method When an event is dispatched, the callback is triggered in the component. 2`] = `
<div>
  <h1>
    Elements
  </h1>
  <ul
    id="listContainer"
  />
  <p
    id="message"
  >
    A message from an Acta event.
  </p>
  <p
    id="simpleValue"
  >
    Not Set
  </p>
  <p
    id="stateWithInitialValue"
  >
    THIS IS AN INITIAL VALUE
  </p>
  <div
    id="functionnalComponentRoot"
  >
    <p
      id="valueFromState"
    >
      Not set yet
    </p>
    <p
      id="valueFromEvent"
    >
      Not set yet
    </p>
  </div>
  <button
    id="unmountFunctionalComponent"
    onClick={[Function]}
  >
    unmount functionnal component
  </button>
</div>
`;
